--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "bootstrap": "^5.0.0-beta3",
         "axios": "^0.21",
+        "jquery": "^3.6",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "@popperjs/core": "^2.9.3",
+        "popper.js": "^1.16.1",
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1"
     }
 }
